--- a/index.html
+++ b/index.html
@@ -1,208 +1,202 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credit Card App</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            margin: 20px;
-        }
-        h1 {
-            color: #3498db;
-        }
-        p {
-            color: #bdc3c7;
-            font-size: 18px;
-            margin: 20px 0;
-        }
-        #topButtons {
-            display: flex;
-            justify-content: flex-end;
-            margin-bottom: 20px;
-        }
-        button {
-            background: none;
-            border: none;
-            padding: 15px 30px;
-            color: #27ae60; /* لون أخضر */
-            font-weight: bold;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-        button:hover {
-            color: #219653; /* لون أخضر داكن عند التحويل */
-        }
-        #searchContainer {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        #searchInput {
-            padding: 10px;
-            width: 300px;
-            border-radius: 8px;
-            margin-right: 10px;
-        }
-        #searchButton {
-            background: none;
-            border: none;
-            color: #27ae60; /* لون أخضر */
-            padding: 10px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-        #searchButton:hover {
-            color: #219653; /* لون أخضر داكن عند التحويل */
-        }
-        #cardContainer {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .creditCard {
-            padding: 15px;
-            color: #fff;
-            text-align: left;
-            border-radius: 8px;
-            width: 300px;
-            transition: transform 0.3s;
-            cursor: pointer;
-            background-size: cover;
-            background-position: center;
-            background-image: url('card_background.jpg'); /* اسم الصورة الخاصة بك */
-        }
-        .creditCard:hover {
-            transform: translateY(-5px);
-        }
-        #footer {
-            margin-top: 50px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-        .socialIcon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #3498db;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            text-decoration: none;
-            margin-top: 20px;
-            transition: background-color 0.3s;
-        }
-        .socialIcon:hover {
-            background-color: #2980b9; /* لون أزرق داكن عند التحويل */
-        }
-        #generateCardButton {
-            background: none;
-            border: none;
-            color: #27ae60; /* لون أخضر */
-            padding: 15px 30px;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-        #generateCardButton:hover {
-            color: #219653; /* لون أخضر داكن عند التحويل */
-        }
-    </style>
+    <title>واجهة المستخدم</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div id="topButtons">
-        <button onclick="showCodePrompt()">Button 1</button>
-        <button>Button 2</button>
-        <button>Button 3</button>
-        <button>Button 4</button>
-        <button>Button 5</button>
+
+    <div class="header">
+        <i class="fas fa-bars icon" id="sidebarToggle"></i>
+        <div class="title">اسم المتجر</div>
+        <i class="fas fa-search icon"></i>
     </div>
 
-    <h1>Welcome to the Credit Card App</h1>
-    <p>Generate a virtual credit card or log in to access more features.</p>
-
-    <div id="searchContainer">
-        <input type="text" id="searchInput" placeholder="Search...">
-        <button id="searchButton" onclick="search()">Search</button>
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="ابحث...">
     </div>
 
-    <button id="generateCardButton" onclick="generateCard()">Generate Card</button>
+    <div class="announcement-bar">
+        <div class="announcement-slider" id="announcementSlider">
+            <!-- Placeholder for dynamic ads -->
+        </div>
+    </div>
 
-    <div id="cardContainer"></div>
+    <div class="filters">
+        <button class="filter-button">كهربائيات</button>
+        <button class="filter-button">أثاث</button>
+        <button class="filter-button">ملابس</button>
+        <button class="filter-button">سيارات</button>
+    </div>
 
-    <div id="footer">
-        <a class="socialIcon" href="#" onclick="addSocialIcon('https://chat.openai.com/c/e2b9a6a4-1be0-4bfa-bdbe-ca3777c73a4a')">Facebook</a>
-        <a class="socialIcon" href="#" onclick="addSocialIcon('—Pngtree—transparent watercolor flowers_9036505.png')">Gmail</a>
-        <a class="socialIcon" href="#" onclick="addSocialIcon('instagram')">Instagram</a>
-        <a class="socialIcon" href="#" onclick="addSocialIcon('google-play')">Google Play</a>
-        <a class="socialIcon" href="#" onclick="addSocialIcon('app-store')">App Store</a>
+    <div class="categories" id="categories">
+        <!-- Placeholder for dynamic categories -->
+    </div>
+
+    <div class="footer">
+        <i class="fas fa-home icon"></i>
+        <i class="fas fa-search icon"></i>
+        <i class="fas fa-heart icon"></i>
+        <i class="fas fa-user icon"></i>
+    </div>
+
+    <div class="sidebar" id="sidebar">
+        <span class="close-btn" id="sidebarClose">&times;</span>
+        <a href="#" id="settingsToggle">الإعدادات</a>
+        <a href="#" id="addAdToggle">إضافة إعلان</a>
+        <a href="#" id="addCategoryToggle">إضافة فئة</a>
+        <a href="#" id="addFilterToggle">إضافة فلتر</a>
+        <a href="#" id="searchToggle">البحث</a>
+    </div>
+
+    <div class="settings-panel" id="settingsPanel">
+        <h2>إعدادات الواجهة</h2>
+        <label for="backgroundColor">لون الخلفية:</label>
+        <input type="color" id="backgroundColor" name="backgroundColor" value="#f4f7f6">
+        <label for="textColor">لون النصوص:</label>
+        <input type="color" id="textColor" name="textColor" value="#333">
+        <label for="titleColor">لون العناوين:</label>
+        <input type="color" id="titleColor" name="titleColor" value="#007bff">
+        <label for="fontSize">حجم الخط:</label>
+        <input type="range" id="fontSize" name="fontSize" min="12" max="24" value="16">
+        <label for="adHeight">ارتفاع الإعلانات:</label>
+        <input type="range" id="adHeight" name="adHeight" min="100" max="300" value="150">
+        <label for="categoryWidth">عرض الفئات:</label>
+        <input type="range" id="categoryWidth" name="categoryWidth" min="150" max="300" value="200">
+        <button onclick="applySettings()">تطبيق الإعدادات</button>
+    </div>
+
+    <div class="add-item-panel" id="addAdPanel">
+        <h2>إضافة إعلان</h2>
+        <label for="adText">نص الإعلان:</label>
+        <input type="text" id="adText">
+        <label for="adImage">رابط الصورة:</label>
+        <input type="url" id="adImage">
+        <button onclick="addAd()">إضافة إعلان</button>
+    </div>
+
+    <div class="add-item-panel" id="addCategoryPanel">
+        <h2>إضافة فئة</h2>
+        <label for="categoryName">اسم الفئة:</label>
+        <input type="text" id="categoryName">
+        <label for="categoryImage">رابط الصورة:</label>
+        <input type="url" id="categoryImage">
+        <button onclick="addCategory()">إضافة فئة</button>
+    </div>
+
+    <div class="add-item-panel" id="addFilterPanel">
+        <h2>إضافة فلتر</h2>
+        <label for="filterName">اسم الفلتر:</label>
+        <input type="text" id="filterName">
+        <button onclick="addFilter()">إضافة فلتر</button>
     </div>
 
     <script>
-        function showCodePrompt() {
-            const code = prompt('Please enter a code (1, 2, 3, or 4):');
-            alert(`You entered: ${code}`);
-        }
+        // Sidebar toggle
+        document.getElementById('sidebarToggle').addEventListener('click', function() {
+            document.getElementById('sidebar').style.left = '0';
+        });
+        document.getElementById('sidebarClose').addEventListener('click', function() {
+            document.getElementById('sidebar').style.left = '-300px';
+        });
 
-        function search() {
-            const searchTerm = document.getElementById('searchInput').value;
-            alert(`Searching for: ${searchTerm}`);
-        }
+        // Settings panel toggle
+        document.getElementById('settingsToggle').addEventListener('click', function() {
+            document.getElementById('settingsPanel').style.display = 'block';
+        });
 
-        function generateCard() {
-            const code = prompt('Please enter a code (1, 2, 3, or 4):');
-            const cardContainer = document.getElementById('cardContainer');
-            const card = document.createElement('div');
-            card.className = 'creditCard';
-            card.innerText = generateRandomCard();
-            cardContainer.innerHTML = '';
-            cardContainer.appendChild(card);
+        // Add Ad panel toggle
+        document.getElementById('addAdToggle').addEventListener('click', function() {
+            document.getElementById('addAdPanel').style.display = 'block';
+        });
 
-            card.addEventListener('mouseenter', () => {
-                card.style.transform = 'translateY(-5px)';
+        // Add Category panel toggle
+        document.getElementById('addCategoryToggle').addEventListener('click', function() {
+            document.getElementById('addCategoryPanel').style.display = 'block';
+        });
+
+        // Add Filter panel toggle
+        document.getElementById('addFilterToggle').addEventListener('click', function() {
+            document.getElementById('addFilterPanel').style.display = 'block';
+        });
+
+        // Search toggle
+        document.getElementById('searchToggle').addEventListener('click', function() {
+            document.getElementById('searchInput').focus();
+        });
+
+        // Hide panels when clicking outside
+        document.querySelectorAll('.settings-panel, .add-item-panel').forEach(panel => {
+            panel.addEventListener('click', function(event) {
+                if (event.target === this) {
+                    this.style.display = 'none';
+                }
             });
+        });
 
-            card.addEventListener('mouseleave', () => {
-                card.style.transform = 'translateY(0)';
+        function applySettings() {
+            document.body.style.backgroundColor = document.getElementById('backgroundColor').value;
+            document.querySelector('.header').style.color = document.getElementById('titleColor').value;
+            document.querySelector('.announcement-bar').style.backgroundColor = document.getElementById('backgroundColor').value;
+            document.querySelector('.announcement-bar').style.fontSize = document.getElementById('fontSize').value + 'px';
+            document.querySelectorAll('.announcement-item').forEach(item => {
+                item.style.height = document.getElementById('adHeight').value + 'px';
             });
-
-            card.addEventListener('click', () => {
-                const dummy = document.createElement('textarea');
-                document.body.appendChild(dummy);
-                dummy.value = card.innerText;
-                dummy.select();
-                document.execCommand('copy');
-                document.body.removeChild(dummy);
-                alert('Card details copied to clipboard!');
+            document.querySelectorAll('.category').forEach(cat => {
+                cat.style.width = document.getElementById('categoryWidth').value + 'px';
             });
         }
 
-        function generateRandomCard() {
-            const cardName = "Card Holder: " + generateRandomName();
-            const cardNumber = "Card Number: " + Math.floor(Math.random() * 1000000000000000);
-            const expirationDate = "Expiration Date: " + Math.floor(Math.random() * 12 + 1) + "/" + (new Date().getFullYear() + Math.floor(Math.random() * 5));
-            const cvv = "CVV: " + Math.floor(Math.random() * 1000);
-            return `${cardName}\n${cardNumber}\n${expirationDate}\n${cvv}`;
+        function addAd() {
+            const text = document.getElementById('adText').value;
+            const image = document.getElementById('adImage').value;
+            const adElement = document.createElement('div');
+            adElement.className = 'announcement-item';
+            adElement.style.backgroundImage = `url(${image})`;
+            adElement.innerText = text;
+            document.getElementById('announcementSlider').appendChild(adElement);
+            document.getElementById('addAdPanel').style.display = 'none';
+            document.getElementById('adText').value = '';
+            document.getElementById('adImage').value = '';
         }
 
-        function generateRandomName() {
-            const names = ["John Doe", "Jane Doe", "Alice Johnson", "Bob Smith", "Eva Brown"];
-            return names[Math.floor(Math.random() * names.length)];
+        function addCategory() {
+            const name = document.getElementById('categoryName').value;
+            const image = document.getElementById('categoryImage').value;
+            const categoryElement = document.createElement('div');
+            categoryElement.className = 'category';
+            categoryElement.innerHTML = `
+                <img src="${image}" alt="${name}">
+                <div class="category-name">${name}</div>
+            `;
+            document.getElementById('categories').appendChild(categoryElement);
+            document.getElementById('addCategoryPanel').style.display = 'none';
+            document.getElementById('categoryName').value = '';
+            document.getElementById('categoryImage').value = '';
         }
 
-        function addSocialIcon(platform) {
-            alert(`Adding ${platform} icon to the footer!`);
+        function addFilter() {
+            const name = document.getElementById('filterName').value;
+            const filterButton = document.createElement('button');
+            filterButton.className = 'filter-button';
+            filterButton.innerText = name;
+            document.querySelector('.filters').appendChild(filterButton);
+            document.getElementById('addFilterPanel').style.display = 'none';
+            document.getElementById('filterName').value = '';
         }
+
+        // Search function
+        document.getElementById('searchInput').addEventListener('input', function() {
+            const searchText = this.value.toLowerCase();
+            document.querySelectorAll('.category, .announcement-item').forEach(item => {
+                const itemName = item.querySelector('.category-name') ? item.querySelector('.category-name').innerText.toLowerCase() : item.innerText.toLowerCase();
+                item.style.display = itemName.includes(searchText) ? 'block' : 'none';
+            });
+        });
     </script>
+
 </body>
 </html>
