--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </main>
 
     <div id="bottom-toolbar">
-        <a href="#" id="home-btn"><i class="fas fa-home"></i>الرئيسية</a>
+        <a href="index.html" id="home-btn"><i class="fas fa-home"></i>الرئيسية</a>
         <a href="#" id="categories-btn"><i class="fas fa-th-large"></i>الفئات</a>
         <a href="#" id="favorites-btn"><i class="fas fa-heart"></i>المفضلة</a>
         <a href="#" id="profile-btn"><i class="fas fa-user"></i>الملف الشخصي</a>
