--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -7,8 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* أضف نفس الأنماط من الصفحة الرئيسية هنا */
-        /* يمكنك إضافة أنماط إضافية خاصة بصفحة التفاصيل */
+        /* الأنماط السابقة */
+        body {
+            font-family: 'Tajawal', sans-serif;
+            background-color: #f0f3f6;
+            color: #2c3e50;
+            margin: 0;
+            padding: 20px;
+        }
         .lawyer-details {
             max-width: 800px;
             margin: 0 auto;
@@ -26,9 +32,11 @@
         }
         .lawyer-info h1 {
             margin-bottom: 10px;
+            color: #3498db;
         }
         .lawyer-info p {
-            margin-bottom: 5px;
+            margin-bottom: 10px;
+            line-height: 1.6;
         }
         .social-links {
             display: flex;
@@ -38,6 +46,23 @@
         .social-links a {
             font-size: 24px;
             color: #3498db;
+            transition: color 0.3s ease;
+        }
+        .social-links a:hover {
+            color: #2980b9;
+        }
+        .back-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .back-button:hover {
+            background-color: #2980b9;
         }
     </style>
 </head>
@@ -55,15 +80,22 @@
             <a id="lawyer-facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a id="lawyer-instagram" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
+        <a href="index.html" class="back-button">العودة إلى الصفحة الرئيسية</a>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     
     <script>
-        // تهيئة Firebase (استخدم نفس التكوين من الصفحة الرئيسية)
+        // تهيئة Firebase
         const firebaseConfig = {
-            // أضف تكوين Firebase الخاص بك هنا
+            apiKey: "AIzaSyDGpAHia_wEmrhnmYjrPf1n1TrAzwEMiAI",
+            authDomain: "messageemeapp.firebaseapp.com",
+            databaseURL: "https://messageemeapp-default-rtdb.firebaseio.com",
+            projectId: "messageemeapp",
+            storageBucket: "messageemeapp.appspot.com",
+            messagingSenderId: "278680662267",
+            appId: "1:278680662267:web:cb9a86a0cd4709b86222b2"
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
@@ -81,17 +113,31 @@
                         document.getElementById('lawyer-address').textContent = `العنوان: ${lawyer.address}`;
                         document.getElementById('lawyer-phone').textContent = `الهاتف: ${lawyer.phone}`;
                         document.getElementById('lawyer-description').textContent = lawyer.description;
-                        document.getElementById('lawyer-whatsapp').href = `https://wa.me/${lawyer.whatsapp}`;
-                        document.getElementById('lawyer-facebook').href = lawyer.facebook;
-                        document.getElementById('lawyer-instagram').href = lawyer.instagram;
+                        
+                        const whatsappLink = document.getElementById('lawyer-whatsapp');
+                        whatsappLink.href = `https://wa.me/${lawyer.whatsapp}`;
+                        whatsappLink.title = `تواصل مع ${lawyer.name} عبر الواتساب`;
+
+                        const facebookLink = document.getElementById('lawyer-facebook');
+                        facebookLink.href = lawyer.facebook;
+                        facebookLink.title = `صفحة ${lawyer.name} على فيسبوك`;
+
+                        const instagramLink = document.getElementById('lawyer-instagram');
+                        instagramLink.href = lawyer.instagram;
+                        instagramLink.title = `حساب ${lawyer.name} على إنستغرام`;
+
+                        // إضافة أي معلومات إضافية هنا إذا كانت موجودة في قاعدة البيانات
                     } else {
                         console.log("لا يوجد محامي بهذا المعرف");
+                        document.querySelector('.lawyer-details').innerHTML = '<p>عذراً، لم يتم العثور على بيانات لهذا المحامي.</p>';
                     }
                 }).catch(error => {
-                    console.error("Error getting lawyer details:", error);
+                    console.error("خطأ في استرجاع بيانات المحامي:", error);
+                    document.querySelector('.lawyer-details').innerHTML = '<p>حدث خطأ أثناء تحميل البيانات. يرجى المحاولة مرة أخرى لاحقاً.</p>';
                 });
             } else {
                 console.log("لم يتم تحديد معرف المحامي");
+                document.querySelector('.lawyer-details').innerHTML = '<p>لم يتم تحديد المحامي المطلوب. يرجى العودة واختيار محامي من القائمة.</p>';
             }
         });
     </script>
