--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -7,44 +7,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* الأنماط السابقة */
+        /* تحديث الأنماط لتتناسب مع الواجهة الرئيسية */
         body {
             font-family: 'Tajawal', sans-serif;
-            background-color: #f0f3f6;
+            background-color: #f4f6f9;
             color: #2c3e50;
             margin: 0;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
         .lawyer-details {
-            max-width: 800px;
-            margin: 0 auto;
+            width: 100%;
+            max-width: 600px;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            text-align: center;
         }
         .lawyer-image {
             width: 100%;
-            max-height: 400px;
+            height: auto;
+            max-height: 300px;
             object-fit: cover;
             border-radius: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         .lawyer-info h1 {
             margin-bottom: 10px;
+            font-size: 24px;
             color: #3498db;
         }
         .lawyer-info p {
             margin-bottom: 10px;
+            font-size: 16px;
             line-height: 1.6;
+            color: #7f8c8d;
         }
         .social-links {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-evenly;
             margin-top: 20px;
         }
         .social-links a {
-            font-size: 24px;
+            font-size: 20px;
             color: #3498db;
             transition: color 0.3s ease;
         }
@@ -63,6 +72,19 @@
         }
         .back-button:hover {
             background-color: #2980b9;
+        }
+
+        /* تحسينات على توافق الشاشات المختلفة */
+        @media (max-width: 768px) {
+            .lawyer-info h1 {
+                font-size: 20px;
+            }
+            .lawyer-info p {
+                font-size: 14px;
+            }
+            .social-links a {
+                font-size: 18px;
+            }
         }
     </style>
 </head>
@@ -126,7 +148,6 @@
                         instagramLink.href = lawyer.instagram;
                         instagramLink.title = `حساب ${lawyer.name} على إنستغرام`;
 
-                        // إضافة أي معلومات إضافية هنا إذا كانت موجودة في قاعدة البيانات
                     } else {
                         console.log("لا يوجد محامي بهذا المعرف");
                         document.querySelector('.lawyer-details').innerHTML = '<p>عذراً، لم يتم العثور على بيانات لهذا المحامي.</p>';
