--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -7,94 +7,82 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* تحديث الأنماط لتناسب متطلبات المستخدم */
         body {
             font-family: 'Tajawal', sans-serif;
-            background-color: #f4f6f9;
+            background-color: #f0f3f6;
             color: #2c3e50;
             margin: 0;
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
         }
         .lawyer-details {
-            width: 100%;
-            max-width: 600px;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            text-align: center;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .lawyer-image {
             width: 100%;
-            height: auto;
-            max-height: 300px;
+            max-height: 400px;
             object-fit: cover;
             border-radius: 10px;
             margin-bottom: 20px;
         }
         .lawyer-info h1 {
-            margin-bottom: 15px;
-            font-size: 26px;
+            margin-bottom: 10px;
+            font-size: 28px;
             color: #3498db;
         }
         .lawyer-info p {
             margin-bottom: 15px;
             font-size: 18px;
             color: #2c3e50;
-            line-height: 1.8;
+            line-height: 1.6;
         }
-        .lawyer-info p span {
+        .lawyer-info p.details {
             font-weight: bold;
             color: #000;
         }
-        hr {
-            border: none;
-            height: 1px;
-            background-color: #dcdcdc;
-            margin: 20px 0;
-        }
         .social-links {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-around;
             margin-top: 20px;
+            padding-top: 15px;
+            border-top: 1px solid #ddd;
         }
         .social-links a {
-            font-size: 20px;
+            font-size: 24px;
             color: #3498db;
             transition: color 0.3s ease;
         }
         .social-links a:hover {
             color: #2980b9;
         }
-        .back-button {
-            display: inline-block;
+        .buttons-container {
+            display: flex;
+            justify-content: space-between;
             margin-top: 20px;
+        }
+        .back-button, .book-button {
+            display: inline-block;
             padding: 10px 20px;
-            background-color: #3498db;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+        .back-button {
+            background-color: #3498db;
+        }
         .back-button:hover {
             background-color: #2980b9;
         }
-
-        /* تحسينات على توافق الشاشات المختلفة */
-        @media (max-width: 768px) {
-            .lawyer-info h1 {
-                font-size: 22px;
-            }
-            .lawyer-info p {
-                font-size: 16px;
-            }
-            .social-links a {
-                font-size: 18px;
-            }
+        .book-button {
+            background-color: #e74c3c;
+        }
+        .book-button:hover {
+            background-color: #c0392b;
         }
     </style>
 </head>
@@ -103,26 +91,26 @@
         <img id="lawyer-image" class="lawyer-image" src="" alt="صورة المحامي">
         <div class="lawyer-info">
             <h1 id="lawyer-name"></h1>
-            <hr>
-            <p id="lawyer-address"><span>العنوان:</span> </p>
-            <hr>
-            <p id="lawyer-phone"><span>الهاتف:</span> </p>
-            <hr>
-            <p id="lawyer-description"><span>الوصف:</span> </p>
+            <p id="lawyer-address" class="details"></p>
+            <p id="lawyer-phone" class="details"></p>
+            <p id="lawyer-description"></p>
         </div>
         <div class="social-links">
             <a id="lawyer-whatsapp" href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a id="lawyer-facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a id="lawyer-instagram" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
-        <a href="index.html" class="back-button">العودة إلى الصفحة الرئيسية</a>
+        <div class="buttons-container">
+            <a href="index.html" class="back-button">العودة إلى الصفحة الرئيسية</a>
+            <a href="booking.html" class="book-button">حجز موعد</a>
+        </div>
     </div>
 
+    <!-- Firebase Initialization and Data Retrieval -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     
     <script>
-        // تهيئة Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGpAHia_wEmrhnmYjrPf1n1TrAzwEMiAI",
             authDomain: "messageemeapp.firebaseapp.com",
@@ -145,9 +133,9 @@
                         const lawyer = doc.data();
                         document.getElementById('lawyer-image').src = lawyer.image;
                         document.getElementById('lawyer-name').textContent = lawyer.name;
-                        document.getElementById('lawyer-address').innerHTML = `<span>العنوان:</span> ${lawyer.address}`;
-                        document.getElementById('lawyer-phone').innerHTML = `<span>الهاتف:</span> ${lawyer.phone}`;
-                        document.getElementById('lawyer-description').innerHTML = `<span>الوصف:</span> ${lawyer.description}`;
+                        document.getElementById('lawyer-address').textContent = `العنوان: ${lawyer.address}`;
+                        document.getElementById('lawyer-phone').textContent = `الهاتف: ${lawyer.phone}`;
+                        document.getElementById('lawyer-description').textContent = lawyer.description;
                         
                         const whatsappLink = document.getElementById('lawyer-whatsapp');
                         whatsappLink.href = `https://wa.me/${lawyer.whatsapp}`;
